--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,25 @@
   padding: 0;
   /* outline: 1px solid red; */
 }
+
+.container {
+  padding: 100px;
+}
+
+.email-input {
+  width: 300px;
+  padding: 5px 10px;
+}
+
+.message {
+  margin-top: 20px;
+  font-size: 17px;
+}
+
+.success {
+  color: blue;
+}
+
+.error {
+  color: red;
+}
