--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,6 @@
 * {
   margin: 0;
   padding: 0;
-  /* outline: 1px solid red; */
-}
-
-.container {
-  padding: 100px;
-}
-
-.email-input {
-  width: 300px;
-  padding: 5px 10px;
-}
-
-.message {
-  margin-top: 20px;
-  font-size: 17px;
-}
-
-.success {
-  color: blue;
-}
-
-.error {
-  color: red;
+  outline: 1px solid red;
+  overflow: auto;
 }
